<resources>
    <string name="app_name_debug">TarAvaz Dev</string>
    <string name="app_name_release">TarAvaz</string>
    <string name="home">صفحه اصلی</string>
    <string name="genre">دسته بندی</string>
    <string name="search">جستجو</string>
    <string name="track">ترانه ها</string>
    <string name="artist">هنرمندان</string>
    <string name="persian_app_name">ترآواز</string>
    <string name="app_description">مرجعی کامل برای دسترسی به موسیقی و ترانه های ایرانی</string>
    <string name="version_name">نسخه ۱</string>
    <string name="newest_songs">جدیدترین‌ترانه‌ها</string>
    <string name="viewAll">همه</string>
    <string name="song_name">گل مریم</string>
    <string name="gole_maryam_lyric">ای گل مریم خوابتو دیدم باز توی رویایی دلنشین و دلباز
گفتم از عشق و ساده خندیدی میوه ی عشقو از دلم چیدی
اما یک لحظه بی تو بارون شد فهمیدم خوابم دنیام زندون شد
این گل مال منه دست به شاخه هاش نزنید
این گل مال منه از گلبرگاش دل بکنید
این گل مال منه دست به شاخه هاش نزنید
این گل مال منه از گلبرگاش دل بکنید
دانلود آهنگ رضا بهرام گل مریم
این بار که میای بارونو بیار رو شونه ی من تو خونه ی درداتو بذار
درداتو بذار رو شونه ی من شاید که خزون رفتش بی نشون از باغ بهار
این گل مال منه دست به شاخه هاش نزنید
این گل مال منه از گلبرگاش دل بکنید
این گل مال منه دست به شاخه هاش نزنید
این گل مال منه از گلبرگاش دل بکنید
این گل مال منه دست به شاخه هاش نزنید
این گل مال منه از گلبرگاش دل بکنید</string>
    <string name="gole_maryam_title">گل مریم</string>
    <string name="gole_maryam_url">http://dl.tabamusic.com/Music/1399/09/Reza%20Bahram%20-%20Gole%20Maryam.mp3</string>
    <string-array name="genres">
        <item>عاشقانه</item>
        <item>ماشین</item>
        <item>غمگین</item>
    </string-array>
    <string name="genre_love">عاشقانه</string>
    <string name="reza_bahram">رضا بهرام</string>
    <string name="mohammad_alizadeh">محمد علیزاده</string>
    <string name="popular_songs">محبوب‌ترین ترانه‌ها</string>
    <string name="value_search">نام ترانه مورد نظر را وارد کنید</string>
    <string name="editor_suggestion">پیشنهاد سردبیر</string>
    <string name="sortBy">مرتب سازی</string>
    <string name="popular">محبوب ترین</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گرانترین</string>
    <string name="sortPriceLowToHigh">ارزانترین</string>
    <string name="artists">هنرمندان</string>
    <string name="suggested">پیشنهادی</string>
    <string name="latest_albums">آلبوم های اخیر</string>
    <string name="genre_title">خواننده موسیقی پاپ</string>
    <string name="song_count">تعداد ترانه ها</string>
    <string name="biography">بیوگرافی</string>
    <string name="pop">موسیقی پاپ</string>
    <string name="player">موزیک پلیر</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_description">Shows the currently playing music</string>
</resources>